--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "elm": "^0.18.0",
+    "elm-webpack-loader": "^4.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "vue": "^2.5.2",
