--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trying-out-vue_todo",
+  "name": "vue-interop",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Kevin Smith <ksmithbaylor@gmail.com>",
